--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <div class="title">
     <div><span class="typcn typcn-heart-outline icon heading"></span></div>
     <div class="smallsep heading"></div>
-    <h1 class="heading"> Clean & Simple</h1>
-    <h2 class="heading">Lorem ipsum dolor sit amet</h2>
+    <h1 class="heading"> Junior Web Developer 강민창!</h1>
     <a class="smoothscroll" href="#about">
     <div class="mouse">
       <div class="wheel"></div>
@@ -36,9 +35,11 @@
 <section id="about">
   <div class="container">
     <div class="row">
-      <h1>About</h1>
+      <h1>Introduction</h1>
       <div class="block"></div>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <p>안녕하세요. 
+저는 신입 웹 개발자
+강민창입니다.</p>
     </div>
     <div class="row">
       <div class="six columns">
