--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="title">
     <div><span class="typcn typcn-heart-outline icon heading"></span></div>
     <div class="smallsep heading"></div>
-    <h1 class="heading"> Junior Web Developer 강민창!</h1>
+    <h1 class="heading"> 신입 개발자 강민창입니다!</h1>
     <a class="smoothscroll" href="#about">
     <div class="mouse">
       <div class="wheel"></div>
@@ -37,9 +37,8 @@
     <div class="row">
       <h1>Introduction</h1>
       <div class="block"></div>
-      <p>안녕하세요. 
-저는 신입 웹 개발자
-강민창입니다.</p>
+      <h2>안녕하세요. 저는 신입 개발자 강민창입니다.</h2>
+      <p>~~~~<br>비전공자이지만 배우면서 흥미를 느겼고 지금은 새로운 기술을 습득하고 습득한 기술을 활용하는 데 재미를 느끼면서 계속 노력하고 발전하고 싶은 개발자입니다<br>좋아하는 일은 하면 더 잘한다는 마음으로 입사하여 저의 역량을 펼치는 날이 왔으면 좋겠습니다!!</p>
     </div>
     <div class="row">
       <div class="six columns">
