--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
     </div>
     <div class="row">
       <div class="six columns">
-        <h3><span class="typcn typcn-device-desktop icon"></span>Our Process</h3>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <h3><span class="typcn typcn-device-desktop icon"></span>Back-End</h3>
+        <p>JAVA<br>Python<br>C<br>DB(MySQL)</p>
       </div>
       <div class="six columns">
-        <h3><span class="typcn typcn-pen icon"></span>Our Approach</h3>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <h3><span class="typcn typcn-pen icon"></span>Front-end</h3>
+        <p>HTML<br>CSS<br>JavaScript<br>jQuery<br>Daisy UI<br>Tailwind<br>React</p>
       </div>
       <div class="row">
         <div class="six columns">
-          <h3><span class="typcn typcn-cog-outline icon"></span>Our Goal</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+          <h3><span class="typcn typcn-cog-outline icon"></span>OS</h3>
+          <p>Linux</p>
         </div>
         <div class="six columns">
-          <h3><span class="typcn typcn-lightbulb icon"></span>Our Mission</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+          <h3><span class="typcn typcn-lightbulb icon"></span>협업 도구</h3>
+          <p>GitHub</p>
         </div>
       </div>
     </div>
@@ -69,26 +69,18 @@
 <section id="team">
   <div class="container">
     <div class="row">
-      <h1>Meet the Team</h1>
+      <h1>Project</h1>
       <div class="block"></div>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <p>총 2개의 프로젝트를 진행하였습니다.<br>하나는 개인 프로젝트이고 또 하나는 팀 프로젝으로 진행하였습니다.</p>
     </div>
     <div class="row">
-      <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt=""/>
-        <h4>Naruto Uzumaki</h4>
+      <div class="three columns"> <img src="이미지1.png" width="220" height="220" alt=""/>
+        <h4>HISTORY TIMELINE</h4>
         <p>Creative Director</p>
         <span class="typcn typcn-social-facebook-circular icon"></span><span class="typcn typcn-social-instagram-circular icon"></span><span class="typcn typcn-social-google-plus-circular icon"></span><span class="typcn typcn-social-linkedin-circular icon"></span> </div>
       <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt=""/>
-        <h4>Sasuke Uchiha</h4>
+        <h4>IMMusic&Art</h4>
         <p>Lead Designer</p>
-        <span class="typcn typcn-social-facebook-circular icon"></span><span class="typcn typcn-social-instagram-circular icon"></span><span class="typcn typcn-social-google-plus-circular icon"></span><span class="typcn typcn-social-linkedin-circular icon"></span> </div>
-      <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt=""/>
-        <h4>Shikamaru Nara</h4>
-        <p>Designer</p>
-        <span class="typcn typcn-social-facebook-circular icon"></span><span class="typcn typcn-social-instagram-circular icon"></span><span class="typcn typcn-social-google-plus-circular icon"></span><span class="typcn typcn-social-linkedin-circular icon"></span> </div>
-      <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt=""/>
-        <h4>Sakura Haruno</h4>
-        <p>Designer</p>
         <span class="typcn typcn-social-facebook-circular icon"></span><span class="typcn typcn-social-instagram-circular icon"></span><span class="typcn typcn-social-google-plus-circular icon"></span><span class="typcn typcn-social-linkedin-circular icon"></span> </div>
     </div>
   </div>
