--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
     <div class="row">
       <div class="six columns">
         <h3><span class="typcn typcn-device-desktop icon"></span>Back-End</h3>
-        <p>JAVA<br>Python<br>C<br>DB(MySQL)</p>
+        <p>▪ JAVA<br>▪ Python<br>▪ C<br>▪ DB(MySQL)</p>
       </div>
       <div class="six columns">
         <h3><span class="typcn typcn-pen icon"></span>Front-end</h3>
-        <p>HTML<br>CSS<br>JavaScript<br>jQuery<br>Daisy UI<br>Tailwind<br>React</p>
+        <p>▪ HTML<br>▪ CSS<br>▪ JavaScript<br>▪ jQuery<br>▪ Daisy UI<br>▪ Tailwind<br>▪ React</p>
       </div>
       <div class="row">
         <div class="six columns">
           <h3><span class="typcn typcn-cog-outline icon"></span>OS</h3>
-          <p>Linux</p>
+          <p>▪ Linux</p>
         </div>
         <div class="six columns">
           <h3><span class="typcn typcn-lightbulb icon"></span>협업 도구</h3>
-          <p>GitHub</p>
+          <p>▪ GitHub</p>
         </div>
       </div>
     </div>
@@ -74,10 +74,11 @@
       <p>총 2개의 프로젝트를 진행하였습니다.<br>하나는 개인 프로젝트이고 또 하나는 팀 프로젝으로 진행하였습니다.</p>
     </div>
     <div class="row">
-      <div class="three columns"> <img src="이미지1.png" width="220" height="220" alt=""/>
+      <div class="three columns"> <img src="이미지1.png" width="250" height="230" alt=""/>
         <h4>HISTORY TIMELINE</h4>
         <p>Creative Director</p>
         <span class="typcn typcn-social-facebook-circular icon"></span><span class="typcn typcn-social-instagram-circular icon"></span><span class="typcn typcn-social-google-plus-circular icon"></span><span class="typcn typcn-social-linkedin-circular icon"></span> </div>
+      <br>
       <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt=""/>
         <h4>IMMusic&Art</h4>
         <p>Lead Designer</p>
