--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>장윤린의 Portfolio</title>
+    <title>강민창의 Portfolio</title>
 
 <!-- CSS 불러오기 -->
 
