--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ header {
 	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	/* 	background: #e55d87; */
+	/* 	background: #aae55d; */
 	/* 	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%); */
 	/* 	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%); */
 	/* 	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%); */
@@ -1760,7 +1760,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 				</div>
 				<nav>
 					<ul>
-						<li><a href="https://yunlinit.github.io/myportfolio/">Home*</a>
+						<li><a href="https://itkmc.github.io/portfolio/">Home*</a>
 						</li>
 						<li><a class="smoothscroll" href="#header">Intro*</a></li>
 						<li><a class="smoothscroll" href="#about">About*</a></li>
