--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ a {
 }
 
 a:hover {
-	color: #A58EFF;
+	color: #e55d87;
 }
 
 /* Header Section
@@ -319,17 +319,10 @@ header {
 	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	/* 	background: #aae55d; */
-	/* 	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%); */
-	/* 	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%); */
-	/* 	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%); */
-	/* 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', */
-	/* 		endColorstr='#5fc3e4', GradientType=1); */
+	
 }
 
 .title {
-	/* 	-webkit-align-self: center; */
-	/* 	-ms-flex-item-align: center; */
 	align-self: center;
 	max-width: 100%;
 	text-align: center;
@@ -352,21 +345,7 @@ header {
 	font-size: 50px;
 }
 
-/* .main_nav { */
-/* 	position: fixed; */
-/* 	top: 0px; */
-/* 	max-height: 50px; */
-/* 	z-index: 999; */
-/* 	width: 100%; */
-/* 	padding-top: 17px; */
-/* 	background: none; */
-/* 	overflow: hidden; */
-/* 	-webkit-transition: all 0.3s; */
-/* 	transition: all 0.3s; */
-/* 	opacity: 0; */
-/* 	top: -100px; */
-/* 	padding-bottom: 6px; */
-/* } */
+
 .main_nav {
 	position: fixed;
 	top: 0;
@@ -444,7 +423,7 @@ nav ul a {
 	text-transform: uppercase;
 	font-size: 13px;
 	text-decoration: none;
-	color: #A58EFF;
+	color: #e55d87;
 }
 
 nav ul a:hover {
@@ -498,47 +477,6 @@ nav ul a:hover {
 	-moz-animation: fade_move_down 2s ease-in-out infinite;
 	animation: fade_move_down 2s ease-in-out infinite;
 }
-
-/* animated scroll arrow animation */
-/* @-webkit-keyframes fade_move_down { */
-/*     0% { */
-/*         -webkit-transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         -webkit-transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
-/* @-moz-keyframes fade_move_down { */
-/*     0% { */
-/*         -moz-transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         -moz-transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
-/* @keyframes fade_move_down { */
-/*     0% { */
-/*         transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
 
 /* animated scroll arrow animation */
 @-webkit-keyframes fade_move_down {
@@ -1021,7 +959,7 @@ a {
 }
 
 a:hover {
-	color: #A58EFF;
+	color: #e55d87;
 }
 
 /* Header Section
@@ -1143,7 +1081,7 @@ nav ul a {
 	text-transform: uppercase;
 	font-size: 13px;
 	text-decoration: none;
-	color: #A58EFF;
+	color: #e55d87;
 }
 
 nav ul a:hover {
@@ -1197,47 +1135,6 @@ nav ul a:hover {
 	-moz-animation: fade_move_down 2s ease-in-out infinite;
 	animation: fade_move_down 2s ease-in-out infinite;
 }
-
-/* animated scroll arrow animation */
-/* @-webkit-keyframes fade_move_down { */
-/*     0% { */
-/*         -webkit-transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         -webkit-transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
-/* @-moz-keyframes fade_move_down { */
-/*     0% { */
-/*         -moz-transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         -moz-transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
-/* @keyframes fade_move_down { */
-/*     0% { */
-/*         transform: translate(0, -10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/*     50% { */
-/*         opacity: 1; */
-/*     } */
-/*     100% { */
-/*         transform: translate(0, 10px) rotate(45deg); */
-/*         opacity: 0; */
-/*     } */
-/* } */
 
 /* animated scroll arrow animation */
 @-webkit-keyframes fade_move_down {
@@ -1496,7 +1393,7 @@ nav ul a:hover {
 }
 
 .profile-info {
-	color: #5e3bee;
+	color: #e55d87;
 	font: 500 22px/25px Inter, sans-serif;
 	width: 520px;
 	margin-top: 20px;
@@ -1519,7 +1416,7 @@ nav ul a:hover {
 .highlight-text {
 	font-family: Pretendard-Regular;
 	font-weight: 600;
-	color: #A58EFF;
+	color: #e55d87;
 }
 
 .regular-text {
