--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ a {
 }
 
 a:hover {
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 /* Header Section
@@ -423,7 +423,7 @@ nav ul a {
 	text-transform: uppercase;
 	font-size: 13px;
 	text-decoration: none;
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 nav ul a:hover {
@@ -959,7 +959,7 @@ a {
 }
 
 a:hover {
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 /* Header Section
@@ -1081,7 +1081,7 @@ nav ul a {
 	text-transform: uppercase;
 	font-size: 13px;
 	text-decoration: none;
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 nav ul a:hover {
@@ -1393,7 +1393,7 @@ nav ul a:hover {
 }
 
 .profile-info {
-	color: #8ae55d;
+	color: #1ee6df;
 	font: 500 22px/25px Inter, sans-serif;
 	width: 520px;
 	margin-top: 20px;
@@ -1416,7 +1416,7 @@ nav ul a:hover {
 .highlight-text {
 	font-family: Pretendard-Regular;
 	font-weight: 600;
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 .regular-text {
@@ -1616,13 +1616,13 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 ********************************************************************* */
 .icon {
 	padding-right: 10px;
-	color: #8ae55d;
+	color: #1ee6df;
 }
 
 .block {
 	width: 70px;
 	height: 2px;
-	background: #8ae55d;
+	background: #1ee6df;
 	/* Old browsers */
 	background: -moz-linear-gradient(-45deg, #cab6fa 0%, #f9dbad 100%);
 	background: -webkit-linear-gradient(-45deg, #cab6fa 0%, #f9dbad 100%);
