--- a/index.html
+++ b/index.html
@@ -1819,10 +1819,10 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
 						</div>
 					</div> <br>
-					<h4>Crema</h4>
+					<h4>HISTORY TIMELINE</h4>
 					<p style="font-family: Pretendard; font-weight: 600;"> <br> 📌 GitHub 바로가기</p> <span class="icon"></span>
 
-				</a> <a href=""
+				</a> <a href="https://github.com/itkmc/24_project"
 					target="blank" class="three columns" style="text-decoration: none;">
 					<div class="box">
 						<div class="project-box">
@@ -1831,10 +1831,10 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
 						</div>
 					</div> <br>
-					<h4>TripAngle</h4>
+					<h4>IMMusic&Art</h4>
 					<p style="font-family: Pretendard; font-weight: 600;"> <br> 📌 GitHub 바로가기 </p> <span class="icon"></span>
 
-				</a> <a href=""
+				</a> <a href="https://github.com/itkmc/IMMusic_project"
 					target="blank" class="three columns" style="text-decoration: none;">
 					<div class="box">
 						<div class="project-box">
@@ -1860,9 +1860,9 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 
 	<section id="contact">
 		<div class="container">
-			<h1>Contact*</h1>
+			<h1>Contact</h1>
 			<div class="block"></div>
-			<form class="gform" method="POST" data-email="yunlinit@gmail.com"
+			<form class="gform" method="POST" data-email="itkang0219@gmail.com"
 				action="https://script.google.com/macros/s/AKfycbxkZTwkACh8C2St2dGm8mxtr3Yuj91yE1f92s-gEhghKd0kle5RHSEXSTuwGjPdZwlmxA/exec">
 				<div class="row">
 					<div class="six columns">
