--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 						<div class="profile-info">
 							<span class="highlight-text inline-block"
 								style="font-size: 30px; font-weight: bold; color: black;">강민창</span>
-							&nbsp;&nbsp; <a href="https://github.com/itkmc" target="blank"
+						</br> <a href="https://github.com/itkmc" target="blank"
 								class="inline-block" style="font-size: 15px;"> <img
 								src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
 								alt="GitHub" style="width: 30px; height: 30px;">
