--- a/index.html
+++ b/index.html
@@ -1730,11 +1730,11 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 							<br> 
 							
 							<a href="https://github.com/itkmc" target="blank"
-								class="inline-block" style="font-size: 15px;"> <img
+								display="inline-block" style="font-size: 15px;"> <img
 								src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
 								alt="GitHub" style="width: 30px; height: 30px;">
 							</a> &nbsp; <a href="https://velog.io/@itkang0219" target="blank"
-								class="inline-block" style="font-size: 15px;"> <img
+								display="inline-block" style="font-size: 15px;"> <img
 								src="https://images.velog.io/images/velog/profile/9aa07f66-5fcd-41f4-84f2-91d73afcec28/green%20favicon.png"
 								alt="Velog" style="width: 23px; height: 23px;">
 
