--- a/index.html
+++ b/index.html
@@ -1727,16 +1727,15 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 						<div class="profile-info">
 							<span class="highlight-text inline-block"
 								style="font-size: 30px; font-weight: bold; color: black;">강민창</span>
-							<br> 
-							
-							<a href="https://github.com/itkmc" target="blank"
-								display="inline-block" style="font-size: 15px;"> <img
+							&nbsp;&nbsp; <a href="https://github.com/itkmc" target="blank"
+								class="inline-block" style="font-size: 15px;"> <img
 								src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
 								alt="GitHub" style="width: 30px; height: 30px;">
-							</a> &nbsp; <a href="https://velog.io/@itkang0219" target="blank"
-								display="inline-block" style="font-size: 15px;"> <img
+							</a> &nbsp; <a href="https://velog.io/@itkang0219/" target="blank"
+								class="inline-block" style="font-size: 15px;"> <img
 								src="https://images.velog.io/images/velog/profile/9aa07f66-5fcd-41f4-84f2-91d73afcec28/green%20favicon.png"
 								alt="Velog" style="width: 23px; height: 23px;">
+							</a>
 
 							</p>
 							<p class="regular-text">📞 010-7518-3408</p>
