--- a/index.html
+++ b/index.html
@@ -1797,54 +1797,57 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 			
 			<!-- first row -->
 			<div class="row">
-				<a href="https://g-sa.koreaisacademy.com/community/project_view.asp?idxnum=263&clkMater=&txtMenu=&txtCurPage=4&selMater=
+				<a href="https://g-sa.koreaisacademy.com/community/project_view.asp?idxnum=263&clkMater=&txtMenu=&txtCurPage=4&selMater="
 					target="blank" class="three columns" style="text-decoration: none; margin-bottom: -30px;">
 					<p style="font-family: Pretendard; font-weight: 600;">✨ 코리아IT아카데미 </br>[수강생프로젝트] 소개</p> <span class="icon"></span>
 
 				</a> 
-				<a href="https://g-sa.koreaisacademy.com/community/project_view.asp?idxnum=245&clkMater=&txtMenu=&txtCurPage=1&selMater="
+				<a href="https://g-sa.koreaisacademy.com/community/project_view.asp?idxnum=246&clkMater=&txtMenu=&txtCurPage=5&selMater="
 					target="blank" class="three columns" style="text-decoration: none; margin-bottom: -30px;">
 					<p style="font-family: Pretendard; font-weight: 600;">✨ 코리아IT아카데미 </br>[수강생프로젝트] 소개 </p> <span class="icon"></span>
 
 				</a> 
 			</div>
 			
-			<!-- first row -->
+	<!-- first row -->
 			<div class="row">
-				<a href="https://github.com/yunlinIT/2024_01_Spring_Crema"
+				<a href="https://github.com/itkmc/24_project"
 					target="blank" class="three columns" style="text-decoration: none;">
 					<div class="box">
 						<div class="project-box">
 							<img class="project-img"
-								src=""
+								src="https://velog.velcdn.com/images/itkang0219/post/182c1465-4e1c-4016-a3be-84f153ae23b7/image.png"
 								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
 						</div>
 					</div> <br>
 					<h4>HISTORY TIMELINE</h4>
-					<p style="font-family: Pretendard; font-weight: 600;"> <br> 📌 GitHub 바로가기</p> <span class="icon"></span>
-
-				</a> <a href="https://github.com/itkmc/24_project"
-					target="blank" class="three columns" style="text-decoration: none;">
-					<div class="box">
-						<div class="project-box">
-							<img
-								src=""
-								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
-						</div>
-					</div> <br>
-					<h4>IMMusic&Art</h4>
-					<p style="font-family: Pretendard; font-weight: 600;"> <br> 📌 GitHub 바로가기 </p> <span class="icon"></span>
+					<p style="font-family: Pretendard; font-weight: 600;">📖 타임라인으로 보는 역사 및 다양한 역사 콘텐츠 <br> 📌 GitHub 바로가기</p> <span class="icon"></span>
 
 				</a> <a href="https://github.com/itkmc/IMMusic_project"
 					target="blank" class="three columns" style="text-decoration: none;">
 					<div class="box">
 						<div class="project-box">
 							<img
-								src=""
+								src="https://velog.velcdn.com/images/itkang0219/post/ed0c595e-0d4e-42d8-b507-189659d02df0/image.png"
 								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
 						</div>
 					</div> <br>
+					<h4>IMMusic&Art</h4>
+					<p style="font-family: Pretendard; font-weight: 600;">🎹 클래식 음악단 소개하는 홈페이지 <br> 📌 GitHub 바로가기 </p> <span class="icon"></span>
 
+				</a> <a href="https://github.com/itkmc/portfolio"
+					target="blank" class="three columns" style="text-decoration: none;">
+					<div class="box">
+						<div class="project-box">
+							<img
+								src="https://velog.velcdn.com/images/itkang0219/post/86a9ed4d-1571-44fa-bbda-e2587d6ffb1f/image.png"
+								style="width: 220px; height: 120px; object-fit: auto; border-radius: 10px;" />
+						</div>
+					</div> <br>
+					<h4>My Portfolio</h4>
+					<p style="font-family: Pretendard; font-weight: 600;">👩🏻‍💻
+						강민창 포트폴리오 <br><br> 📌 GitHub 바로가기</p> <span class="icon"></span>
+				</a>
 			</div>
 
 		</div>
@@ -1861,9 +1864,9 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 
 	<section id="contact">
 		<div class="container">
-			<h1>Contact</h1>
+			<h1>Contact*</h1>
 			<div class="block"></div>
-			<form class="gform" method="POST" data-email="itkang0219@gmail.com"
+			<form class="gform" method="POST" data-email="yunlinit@gmail.com"
 				action="https://script.google.com/macros/s/AKfycbxkZTwkACh8C2St2dGm8mxtr3Yuj91yE1f92s-gEhghKd0kle5RHSEXSTuwGjPdZwlmxA/exec">
 				<div class="row">
 					<div class="six columns">
