--- a/index.html
+++ b/index.html
@@ -1900,42 +1900,15 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 	<footer>
 		<div class="container footer-container">
 			<div class="nine columns">
-				<p>Portfolio* created by Chang Yun Lin</p>
-				<p>Copyright © CHANG YUN LIN. All Right Reserved.</p>
+				<p>Portfolio* created by KANG MIN CHANG </p>
 			</div>
 			<div class="three columns social-btns">
-				<a href="https://github.com/yunlinIT" target="blank" class="icon">GitHub</a>
-				&nbsp;&nbsp; <a href="https://velog.io/@yunlinit" target="blank"
-					class="icon">Velog</a> &nbsp;&nbsp; <a
-					href="https://www.youtube.com/@yunlinit" target="blank"
-					class="icon">YouTube</a> &nbsp;&nbsp;
+				<a href="https://github.com/itkmc" target="blank" class="icon">GitHub</a>
+				&nbsp;&nbsp; <a href="https://velog.io/@itkang0219/posts" target="blank"
+					class="icon">Velog</a> &nbsp;&nbsp; 
 			</div>
 		</div>
 	</footer>
-
-	<!-- Mouse Cursor
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<!-- <img src="https://cur.cursors-4u.net/cursor.png" border="0" alt="Purple Spinning Heart Within A Heart" style="position:absolute; top: 0px; right: 0px;" /> -->
-
-	<img src="https://cur.cursors-4u.net/cursor.png" border="0"
-		alt="Light Red Pointer"
-		style="position: absolute; top: 0px; right: 0px;" />
-
-	<!-- Send Email Alert Javascript
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-	<script>
-		document.querySelector(".gform").addEventListener("submit",
-				function(event) {
-					var checkbox = document.getElementById("checkbox");
-					// 이메일 전송 알림
-					setTimeout(function() {
-						alert("이메일이 성공적으로 전송되었습니다!");
-						document.getElementById("submitBtn").disabled = false; // 문의하기 버튼 활성화
-						document.getElementById("backBtn").disabled = false; // 뒤로가기 버튼 활성화
-					}, 100); // 1초 후에 알림을 표시합니다.
-				});
-	</script>
 
 </body>
 
