--- a/index.html
+++ b/index.html
@@ -149,9 +149,6 @@ a {
 	.five.columns {
 		width: 39.3333333333%;
 	}
-	.six.columns {
-		width: 48%;
-	}
 	.seven.columns {
 		width: 56.6666666667%;
 	}
@@ -196,9 +193,6 @@ a {
 	}
 	.offset-by-five.column, .offset-by-five.columns {
 		margin-left: 43.3333333333%;
-	}
-	.offset-by-six.column, .offset-by-six.columns {
-		margin-left: 52%;
 	}
 	.offset-by-seven.column, .offset-by-seven.columns {
 		margin-left: 60.6666666667%;
@@ -805,9 +799,6 @@ a {
 	.five.columns {
 		width: 39.3333333333%;
 	}
-	.six.columns {
-		width: 48%;
-	}
 	.seven.columns {
 		width: 56.6666666667%;
 	}
@@ -852,9 +843,6 @@ a {
 	}
 	.offset-by-five.column, .offset-by-five.columns {
 		margin-left: 43.3333333333%;
-	}
-	.offset-by-six.column, .offset-by-six.columns {
-		margin-left: 52%;
 	}
 	.offset-by-seven.column, .offset-by-seven.columns {
 		margin-left: 60.6666666667%;
@@ -1719,9 +1707,6 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 						<img loading="lazy"
 							src="https://velog.velcdn.com/images/itkang0219/post/9deddc26-7d14-4adb-b6c3-c7eedb7c0f52/image.jpg"
 							class="profile-image profile-image-1" alt="Profile image of 강민창" /> 
-						<img loading="lazy"
-							src=""
-							class="profile-image profile-image-2" alt="Profile image of 강민창" />
 					</div>
 					<div class="info-column">
 						<div class="profile-info">
@@ -1865,32 +1850,9 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 	<section id="contact">
 		<div class="container">
 			<h1>Contact*</h1>
-			<div class="block"></div>
-			<form class="gform" method="POST" data-email="yunlinit@gmail.com"
-				action="https://script.google.com/macros/s/AKfycbxkZTwkACh8C2St2dGm8mxtr3Yuj91yE1f92s-gEhghKd0kle5RHSEXSTuwGjPdZwlmxA/exec">
-				<div class="row">
-					<div class="six columns">
-						<label for="exampleRecipientInput">Name</label> <input
-							class="u-full-width" type="text" autocomplete="off"
-							placeholder="이름을 입력해주세요" name="name" />
-					</div>
-					<div class="six columns">
-						<label for="exampleRecipientInput">Phone</label> <input
-							class="u-full-width" type="text" autocomplete="off"
-							placeholder="전화번호를 입력해주세요" name="contact" />
-					</div>
-					<div class="six columns" style="margin-left: 0%;">
-						<label for="exampleEmailInput">Email</label> <input
-							class="u-full-width" type="email" autocomplete="off"
-							placeholder="id@email.com" name="email" />
-					</div>
-				</div>
-				<div class="row">
-					<label for="exampleMessage">Message</label>
-					<textarea class="u-full-width" placeholder="내용을 입력해주세요" name="body"></textarea>
-					<input class="button-primary" type="submit" value="Submit">
-				</div>
-			</form>
+			<p class="regular-text">📞 010-7518-3408</p>
+			<p class="regular-text">✉️ itkang0219@gmail.com</p>
+			<p>둘 중에 하나로 연락주시면 감사하겠습니다!!!</p>
 		</div>
 	</section>
 
