--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ nav ul a:hover {
 /* Intro Section
 ********************************************************************* */
 .container2 {
-	background-color: #fcf8ff;
+	background-color: #1ee6df;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -675,7 +675,7 @@ nav ul a:hover {
 <!-- 우클릭 & 드래그 방지 -->
 <script type="text/javascript">
 	document.oncontextmenu = function() {
-		alert("오른쪽 마우스 버튼을 사용할 수 없어용♥"); // 우클릭 시 알림 메시지 표시
+		alert("오른쪽 마우스 버튼은 안돼~~!!"); // 우클릭 시 알림 메시지 표시
 		return false; // 기본 우클릭 메뉴를 비활성화
 	};
 </script>
